<resources>
    <string name="app_name">GetAcceptTest</string>
    <string name="_10">10</string>
    <string name="calculation_test">Calculation Test</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="score_calculation">Score Calculation</string>
    <string name="high_score">High Score:</string>
    <string name="current_score">Current Score:</string>
    <string name="_00">0</string>
    <string name="restart">Restart</string>
    <string name="spare">Spare</string>
    <string name="strike">Strike</string>
    <string name="x">X</string>
    <string name="strike_view_2">strike_view_2</string>
    <string name="strike_view_three">strike_view_three</string>
    <string name="_x">X</string>
</resources>
