<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/score_calculation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="88dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:id="@+id/top_border" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:background="@color/colorAccent"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:id="@+id/lower_border" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorAccent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/button_number_zero" android:layout_marginTop="10dp"/>
    <Button
            android:text="@string/_0"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_zero"
            app:layout_constraintTop_toBottomOf="@+id/top_border" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="3dp" style="@android:style/Widget.Button" android:layout_marginTop="10dp"/>
    <Button
            android:text="@string/_1"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_one"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            app:layout_constraintStart_toEndOf="@+id/button_number_zero"
            android:layout_marginStart="5dp" android:layout_marginTop="10dp" style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_2"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_two"
            app:layout_constraintTop_toBottomOf="@+id/top_border" android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/button_number_one" android:layout_marginStart="5dp"
            style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_3"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_three" app:layout_constraintStart_toEndOf="@+id/button_number_two"
            app:layout_constraintTop_toBottomOf="@+id/top_border" android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_4"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_four"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            app:layout_constraintStart_toEndOf="@+id/button_number_three" android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_5"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_five"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            app:layout_constraintStart_toEndOf="@+id/button_number_four" android:layout_marginStart="8dp"
            android:layout_marginTop="10dp" style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_6"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_six"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            app:layout_constraintStart_toEndOf="@+id/button_number_five" android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_7"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_seven"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            app:layout_constraintStart_toEndOf="@+id/button_number_six" android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_8"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_eight"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            app:layout_constraintStart_toEndOf="@+id/button_number_seven" android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" style="@android:style/Widget.Button"/>
    <Button
            android:text="@string/_9"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_nine"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            app:layout_constraintStart_toEndOf="@+id/button_number_eight"
            android:layout_marginStart="5dp" style="@android:style/Widget.Button" android:layout_marginTop="10dp"/>
    <Button
            android:text="@string/_10"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:id="@+id/button_number_ten"
            app:layout_constraintStart_toEndOf="@+id/button_number_nine" android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
            style="@android:style/Widget.Button"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.454" app:layout_constraintTop_toBottomOf="@+id/top_border"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/score_view_one" tools:text="0"
            android:textAlignment="center" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/lower_border" android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" android:textColor="@android:color/white"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/score_view_two"
            app:layout_constraintTop_toBottomOf="@+id/lower_border"
            android:layout_marginTop="10dp" tools:text="0" android:textSize="24sp" android:textAlignment="center"
            android:textColor="@android:color/white" android:background="@android:color/darker_gray"
            app:layout_constraintStart_toEndOf="@+id/score_view_one" android:layout_marginStart="8dp"
    />
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/result_of_view_one"
            app:layout_constraintTop_toBottomOf="@+id/score_view_one" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:background="@android:color/darker_gray" android:textSize="24sp"
            android:textColor="@android:color/white" tools:text="20" android:textAlignment="center"
            android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="5dp"
            android:layout_height="96dp"
            android:id="@+id/textView9" android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/lower_border" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="120dp"
    />
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/score_view_three"
            app:layout_constraintTop_toBottomOf="@+id/lower_border"
            android:layout_marginTop="10dp" tools:text="0" android:textSize="24sp"
            android:textColor="@android:color/white" android:textAlignment="center"
            android:background="@android:color/darker_gray" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="15dp"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/score_view_four" app:layout_constraintStart_toEndOf="@+id/score_view_three"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/lower_border"
            android:layout_marginTop="10dp" tools:text="@string/_0" android:textAlignment="center"
            android:textSize="24sp" android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/result_view_two" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/score_view_three"
            app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="45dp" tools:text="200"
            android:textSize="24sp" android:textAlignment="center" android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"/>
    <TextView
            android:layout_width="5dp"
            android:layout_height="96dp"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/lower_border"
            android:background="@color/colorAccent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="112dp" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="112dp"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/score_view_five"
            app:layout_constraintTop_toBottomOf="@+id/lower_border" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="15dp" android:layout_marginTop="10dp" tools:text="0"
            android:textAlignment="center" android:textSize="24sp" android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/score_view_six"
            app:layout_constraintTop_toBottomOf="@+id/lower_border"
            app:layout_constraintStart_toEndOf="@+id/score_view_five" android:layout_marginStart="8dp"
            android:layout_marginTop="10dp" tools:text="0" android:textSize="24sp" android:textAlignment="center"
            android:textColor="@android:color/white" android:background="@android:color/darker_gray"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:id="@+id/result_view_three" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/score_view_five"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="45dp" tools:text="200"
            android:textAlignment="center" android:textSize="24sp" android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorAccent"/>
    <TextView
            android:text="@string/current_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp" android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_score_value"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginStart="20dp"
            android:textSize="24sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:textSize="24sp"
            android:layout_marginStart="10dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/high_score_value" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/current_score_value"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginStart="20dp" android:textSize="24sp"/>
    <Button
            android:text="@string/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restart_button" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" style="@android:style/Widget.Button"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:id="@+id/textView14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/restart_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>